# BustAPI

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  check_path.py  debug_body.py  debug_routes.py  mkdocs.yml  pyproject.toml  run_all_examples.py  test_basic.py  test_examples_endpoints.py  test_trim  todo.md  versions.json
.github/: FUNDING.yml
0.10.0/: 404.html  index.html  sitemap.xml
0.10.1/: 404.html  index.html  sitemap.xml
0.10.3/: 404.html  index.html  sitemap.xml
0.9.1/: 404.html  index.html  sitemap.xml
0.9.2/: 404.html  index.html  sitemap.xml
Legacy-Code/: Cargo.toml  pyproject.toml
benchmarks/: README.md  app.py  benchmark_all.py  benchmark_avg.py  benchmark_cache.py  benchmark_server.py  bustapi_bench.py  bustapi_internal.py  calc_bench.py  catzilla_server.py  comprehensive_benchmark.py  fastapi_server.py  flask_server.py  framework_comparison.py  gen_graph.py  last_results.txt  quick_bench.py  resource_bench.py  run_bench.py  run_comparison.py  run_comparison_auto.py  ws_benchmark.py
docs/: api-reference.md  api.rst  changelog.md  conf.py  index.md  index.rst  installation.md  quickstart.md  release_track.md
examples/: 01_hello_world.py  02_parameters.py  03_async.py  04_request_data.py  05_templates.py  06_blueprints.py  07_database_raw.py  08_auto_docs.py  09_complex_routing.py  10_database_sqlmodel.py  10_rate_limit_demo.py  11_security_demo.py  12_test_modes.py  13_error_handling.py  14_middleware.py  17_jwt_auth.py  17_safe_features.py  18_safe_advanced.py  19_all_types.py  20_file_uploads.py  21_path_validation.py  (+8 more)
(+371 files in other folders)
