[package]
name = "bustapi_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "bustapi_core"
crate-type = ["cdylib"]

[dependencies]
# Actix-web (replaces Hyper for better performance)
actix-web = "4"
actix-rt = "2"
actix-http = "3"

# PyO3 with latest version for free-threading support
pyo3 = { version = "0.23", features = ["extension-module"] }
# Use pyo3-async-runtimes instead (compatible with pyo3 0.23)
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
http = "1.0"
url = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
num_cpus = "1.0"

[build-dependencies]
pyo3-build-config = "0.23"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true